--- a/Front/src/index.css
+++ b/Front/src/index.css
@@ -4,7 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
-
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  height: 100%;
+}
 
 @layer base {
   .font-lifeSavers {
